# triton-tools-aot

./: .gitignore  README.md  env.sh
examples/01-vector-add/: .gitignore  01-vector-add.py  CMakeLists.txt  Makefile  add_kernel.c  add_kernel.h  aot-compile.sh  generate_kernel.py  test_add_kernel.cu  vector_add.py
examples/fused-moe/: .gitignore  CMakeLists.txt  aot-compile.sh  fused_moe.py  generate_kernel.py  setup.py  test.cu  wrapper_for_torch.cu
tools/: compile.c  compile.h  compile.py  compile2.py  link.py
